Adds slides and video for hash-functions lecture

--- a/modules/week-2/lecture-hash-functions.html
+++ b/modules/week-2/lecture-hash-functions.html
@@ -9,6 +9,18 @@ modules:
 ---
 <h3>Content</h3>
 <p><span>High level description of hash functions, properties of hash functions, relation to random oracles, and standards.</span></p>
+<p><a 
+  href="https://people.kth.se/~dbosk/tilkry/one-way-slides.pdf">Slides</a></p>
+<iframe id="kmsembed-0_go5131dq" width="650" height="366" 
+  src="https://play.kth.se/embed/secure/iframe/entryId/0_go5131dq/uiConfId/23453971/st/0" 
+  class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen 
+allow="autoplay *; fullscreen *; encrypted-media *" 
+referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads 
+allow-forms allow-same-origin allow-scripts allow-top-navigation 
+allow-pointer-lock allow-popups allow-modals allow-orientation-lock 
+allow-popups-to-escape-sandbox allow-presentation 
+allow-top-navigation-by-user-activation" frameborder="0" 
+title="tilkry26-hash"></iframe>
 <h3>Material from previous years</h3>
 <h4><span>Slides</span></h4>
 <p><a class="instructure_file_link instructure_scribd_file inline_disabled" title="one-way-slides.pdf" href="https://canvas.kth.se/courses/52629/files/8954711?verifier=3be0lkFm5t4sGiX03wwH4KH5IrxZCUpWIkO3PYbO&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/52629/files/8954711" data-api-returntype="File">one-way-slides.pdf</a> (updated after the recording, fixes errors)</p>
