Publish week-1 intro and ciphers slides
Move course-overview slide sources into week-1, publish stable PDFs via the module Makefile, and update Canvas page links. Add unified agent instruction pointers.

--- a/modules/week-1/lecture-intro.html
+++ b/modules/week-1/lecture-intro.html
@@ -10,7 +10,7 @@ modules:
 <h3 id="content">Content</h3>
 <p>An introduction to the course. Short overview of the topics
 covered.</p>
-<p><a href="https://canvas.kth.se/courses/59543/files/9512712?verifier=2Fmk0dACJAOGHlYBGEtbUw67GIy5by0EzLraC77x&amp;wrap=1" class="instructure_file_link instructure_scribd_file inline_disabled" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512712" data-api-returntype="File" title="slides-1.pdf">slides-tilkry25-intro.pdf</a></p>
+<p><a href="https://people.kth.se/~dbosk/tilkry/intro-slides.pdf">intro-slides.pdf</a></p>
 <h3 id="resources-from-previous-years">Resources from previous
 years</h3>
 <ul>
