--- a/modules/week-1/lecture-ciphers.html
+++ b/modules/week-1/lecture-ciphers.html
@@ -12,5 +12,5 @@ modules:
 Attacks on simple ciphers. High level description and intuition behind
 the construction of modern ciphers.</p>
 <h3 id="slides">Slides</h3>
-<p><a href="https://canvas.kth.se/courses/59543/files/9512666?verifier=p75otHNHKUqQG4Mg2FcAyiHS0ZqvTWfWVDsLzByy&amp;wrap=1" class="instructure_file_link instructure_scribd_file inline_disabled" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512666" data-api-returntype="File" title="tilkry23_lec02_ciphers.pdf">tilkry23_lec02_ciphers.pdf</a></p>
+<p><a href="https://people.kth.se/~dbosk/tilkry/ciphers-slides.pdf">ciphers-slides.pdf</a></p>
 
