Adjusts modules for week-1 pages

--- a/modules/week-1/lecture-ciphers.html
+++ b/modules/week-1/lecture-ciphers.html
@@ -5,7 +5,7 @@ published: true
 front_page: false
 editing_roles: teachers
 modules:
-- Week 1 (calendar week 3)
+- Week 1
 ---
 <h3 id="content">Content</h3>
 <p>High level description of ciphers, simple ciphers, and standards.
