--- a/modules/week-1/lecture-ciphers.html
+++ b/modules/week-1/lecture-ciphers.html
@@ -11,6 +11,6 @@ modules:
 <p>High level description of ciphers, simple ciphers, and standards.
 Attacks on simple ciphers. High level description and intuition behind
 the construction of modern ciphers.</p>
-<h3 id="slides">Slides</h3>
+<h3 id="slides">Material</h3>
 <p><a href="https://people.kth.se/~dbosk/tilkry/ciphers-slides.pdf">ciphers-slides.pdf</a></p>
-
+<iframe id="kmsembed-0_2insoqmg" width="650" height="366" src="https://play.kth.se/embed/secure/iframe/entryId/0_2insoqmg/uiConfId/23453971/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="tilkry26-ciphers"></iframe>
