Added zk lecture slides and recording

--- a/modules/week-3/lecture-zkp-protocols.html
+++ b/modules/week-3/lecture-zkp-protocols.html
@@ -9,6 +9,18 @@ modules:
 ---
 <h3>Content&nbsp;</h3>
 <p><span>High level description of zero knowledge proofs (ZKP).</span></p>
+<p><a href="https://people.kth.se/~dbosk/tilkry/zk-slides.pdf">ZK lecture 
+  slides</a></p>
+<iframe id="kmsembed-0_fgvmogjz" width="650" height="366" 
+  src="https://play.kth.se/embed/secure/iframe/entryId/0_fgvmogjz/uiConfId/23453971/st/0" 
+  class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen 
+allow="autoplay *; fullscreen *; encrypted-media *" 
+referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads 
+allow-forms allow-same-origin allow-scripts allow-top-navigation 
+allow-pointer-lock allow-popups allow-modals allow-orientation-lock 
+allow-popups-to-escape-sandbox allow-presentation 
+allow-top-navigation-by-user-activation" frameborder="0" 
+title="tilkry26-zk"></iframe>
 <h3>Resources from previous years</h3>
 <p><a class="instructure_file_link instructure_scribd_file inline_disabled" 
   title="tilkry22_lec06_zkp.pdf" 
