Removes parentheses from week 3 module title in lecture-mpc-protocols.html

--- a/modules/week-3/lecture-mpc-protocols.html
+++ b/modules/week-3/lecture-mpc-protocols.html
@@ -5,7 +5,7 @@ published: true
 front_page: false
 editing_roles: teachers
 modules:
-- Week 3 (calendar week 5)
+- Week 3
 ---
 <h3>Content&nbsp;</h3>
 <p><span>High level description of zero knowledge proofs (ZKP) by Douglas. Applications of ZKPs: signatures, brief introduction to secure multiparty computation based on secret sharing. Multiparty computation (MPC) based on garbled circuits, by Roberto.</span></p>
