Adds recording and slides for pubkey lecture

--- a/modules/week-2/lecture-asymmetric-crypto.html
+++ b/modules/week-2/lecture-asymmetric-crypto.html
@@ -9,7 +9,23 @@ modules:
 ---
 <h3><span class="instructure_file_holder link_holder 
     instructure_file_link_holder"><span>Content</span></span></h3>
-<p><span class="instructure_file_holder link_holder instructure_file_link_holder"><span>Intuitive description of public key cryptosystems using padlocks and Merkle's puzzles. Discussion of why this is so hard to achieve. The textbook RSA cryptosystem. Intuitive description of public key signature schemes. The textbook RSA signature scheme and full domain hash RSA signatures.</span></span></p>
+<p><span class="instructure_file_holder link_holder 
+  instructure_file_link_holder"><span>Intuitive description of public key 
+    cryptosystems using padlocks and Merkle's puzzles. Discussion of why this 
+    is so hard to achieve. The ElGamal cryptosystem. Intuitive description of 
+    public key signature schemes.</span></span></p>
+<p><a 
+  href="https://people.kth.se/~dbosk/tilkry/pubkey-slides.pdf">Slides</a></p>
+<iframe id="kmsembed-0_223fbz1j" width="650" height="366" 
+  src="https://play.kth.se/embed/secure/iframe/entryId/0_223fbz1j/uiConfId/23453971/st/0" 
+  class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen 
+allow="autoplay *; fullscreen *; encrypted-media *" 
+referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads 
+allow-forms allow-same-origin allow-scripts allow-top-navigation 
+allow-pointer-lock allow-popups allow-modals allow-orientation-lock 
+allow-popups-to-escape-sandbox allow-presentation 
+allow-top-navigation-by-user-activation" frameborder="0" 
+title="tilkry26-pubkey"></iframe>
 <h3>Material from previous years</h3>
 <h4><span class="instructure_file_holder link_holder instructure_file_link_holder"><span>Slides</span></span></h4>
 <p><span class="instructure_file_holder link_holder instructure_file_link_holder"><span>The following slides complement each other. Read both.</span></span></p>
