Fixes date in non-crypto lecture title

--- a/modules/week-3/lecture-non-cryptographic-attacks.html
+++ b/modules/week-3/lecture-non-cryptographic-attacks.html
@@ -1,14 +1,14 @@
 ---
-title: 'Lecture 28/1: Non-cryptographic attacks on cryptographic systems (Roberto) on CAMPUS+ZOOM'
-url: lecture-28-slash-1-non-cryptographic-attacks-on-cryptographic-systems-roberto-on-campus+zoom
+title: 'Lecture 27/1: Non-cryptographic attacks on cryptographic systems (Roberto) on CAMPUS+ZOOM'
+url: lecture-27-slash-1-non-cryptographic-attacks-on-cryptographic-systems-roberto
 published: true
 front_page: false
 editing_roles: teachers
 modules:
-- Week 3
+- Week 3 (calendar week 5)
 ---
 <h2>Content</h2>
-<p><span>Side-channel attacks: the case of AES, Specre, fault injection: Rowhammer, Time To Check Time To Use</span></p>
+<p><span>Side-channel attacks: the case of AES, fault injection: Rowhammer, Time To Check Time To Use</span></p>
 <p><span>Instructions:</span></p>
 <p><span>The part related to AES is flipped. You should watch the videos below and solve the exercise published in (<a class="instructure_file_link instructure_scribd_file inline_disabled" title="AES side channel exercise (2).pdf" href="https://canvas.kth.se/courses/52629/files/8426524?verifier=S4dFvCI0kjoLgmzT8MqUqH3FgKDUp4qnOHiOZeVp&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/52629/files/8426524" data-api-returntype="File">AES side channel exercise (2).pdf</a>) at home. During the first hour of the lecture we will review the exercise and discuss the solution. We will no replay the videos below during the live lecture. During the second hour we will look at Spectre, fault injection: Rowhammer, Time To Check Time To Use.</span></p>
 <h3><span>Resources</span></h3>
