Fixes lecture pages for week-3

--- a/modules/week-3/lecture-mpc-protocols.html
+++ b/modules/week-3/lecture-mpc-protocols.html
@@ -1,24 +1,33 @@
 ---
 title: 'Lecture 28/1: MPC protocols (Roberto) on CAMPUS+ZOOM'
-url: lecture-27-slash-1-mpc-protocols-roberto-on-campus
+regex: Lecture.*MPC protocols
 published: true
 front_page: false
 editing_roles: teachers
 modules:
-- Week 3
+- Week 3 (calendar week 5)
 ---
-<h3>Content&nbsp;</h3>
-<p><span>Multiparty computation (MPC) based on garbled circuits.</span></p>
-<iframe id="kmsembed-0_mh0xa6zl" width="650" height="366" 
-  src="https://play.kth.se/embed/secure/iframe/entryId/0_mh0xa6zl/uiConfId/23453971/st/0" 
-  class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen 
-allow="autoplay *; fullscreen *; encrypted-media *" 
-referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads 
+<h3>
+Content&nbsp;
+</h3>
+<p>
+<span>Multiparty computation (MPC) based on garbled circuits.</span>
+</p>
+<iframe id="kmsembed-0_mh0xa6zl" width="650" height="366" src="https://play.kth.se/embed/secure/iframe/entryId/0_mh0xa6zl/uiConfId/23453971/st/0" class="kmsembed" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads 
 allow-forms allow-same-origin allow-scripts allow-top-navigation 
 allow-pointer-lock allow-popups allow-modals allow-orientation-lock 
 allow-popups-to-escape-sandbox allow-presentation 
-allow-top-navigation-by-user-activation" frameborder="0" 
-title="tilkry26-smc"></iframe>
-<h3>Resources from last year</h3>
-<p><span class="instructure_file_holder link_holder instructure_file_link_holder"><a class="file_download_btn" role="button" href="https://canvas.kth.se/courses/59543/files/9512693/download?verifier=O93iVTyhKJyn45Xl5L51KJZHkw116wN9Wnu9lV3j" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512693" data-api-returntype="File"></a></span><span class="instructure_file_holder link_holder instructure_file_link_holder"><a class="instructure_file_link instructure_scribd_file inline_disabled" title="Applied Crypto 2020 - SMC  (2).pdf" href="https://canvas.kth.se/courses/59543/files/9512695?verifier=XwfIg44bRQk2HF6wQBKPyLBC3xFnMeJHBRtfS1tS&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512695" data-api-returntype="File">slides on MPC</a><a class="inline_disabled" title="Applied Crypto 2020 - SMC  (1).pdf" href="https://canvas.kth.se/courses/59543/files/9512651/download?verifier=Gih8gua4mNbI1MkOdncGZer5YljSLT2Sce1bGYvR&amp;wrap=1" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512651" data-api-returntype="File" aria-expanded="false" aria-controls="preview_9"></a><a class="file_download_btn" role="button" href="https://canvas.kth.se/courses/59543/files/9512651/download?verifier=Gih8gua4mNbI1MkOdncGZer5YljSLT2Sce1bGYvR" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512651" data-api-returntype="File"><span>&nbsp;</span></a> (pdf)</span><br><br></p>
-<p><iframe id="kmsembed-0_v6etxffp" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_v6etxffp/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
+allow-top-navigation-by-user-activation" frameborder="0" title="tilkry26-smc" loading="lazy"></iframe>
+<h3>
+Resources from last year
+</h3>
+<p>
+<span class="instructure_file_holder link_holder instructure_file_link_holder"><a class="file_download_btn" role="button" href="https://canvas.kth.se/courses/59543/files/9512693/download?verifier=O93iVTyhKJyn45Xl5L51KJZHkw116wN9Wnu9lV3j" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512693" data-api-returntype="File"></a></span><span class="instructure_file_holder link_holder instructure_file_link_holder"><a class="instructure_file_link instructure_scribd_file inline_disabled" title="Applied Crypto 2020 - SMC  (2).pdf" href="https://canvas.kth.se/courses/59543/files/9512695?verifier=XwfIg44bRQk2HF6wQBKPyLBC3xFnMeJHBRtfS1tS&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512695" data-api-returntype="File">slides
+on
+MPC</a><a class="inline_disabled" title="Applied Crypto 2020 - SMC  (1).pdf" href="https://canvas.kth.se/courses/59543/files/9512651/download?verifier=Gih8gua4mNbI1MkOdncGZer5YljSLT2Sce1bGYvR&amp;wrap=1" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512651" data-api-returntype="File" aria-expanded="false" aria-controls="preview_9"></a><a class="file_download_btn" role="button" href="https://canvas.kth.se/courses/59543/files/9512651/download?verifier=Gih8gua4mNbI1MkOdncGZer5YljSLT2Sce1bGYvR" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512651" data-api-returntype="File"><span>&nbsp;</span></a>
+(pdf)</span><br><br>
+</p>
+<p>
+<iframe id="kmsembed-0_v6etxffp" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_v6etxffp/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+
