--- a/modules/week-3/lecture-non-cryptographic-attacks.html
+++ b/modules/week-3/lecture-non-cryptographic-attacks.html
@@ -1,6 +1,6 @@
 ---
-title: 'Lecture 27/1: Non-cryptographic attacks on cryptographic systems (Roberto) on CAMPUS+ZOOM'
-url: lecture-27-slash-1-non-cryptographic-attacks-on-cryptographic-systems-roberto
+title: ' Lecture 27/1: Non-cryptographic attacks on cryptographic systems (Roberto)'
+regex: Lecture.*Non-cryptographic attacks
 published: true
 front_page: false
 editing_roles: teachers
@@ -18,10 +18,85 @@ modules:
 <p><span class="instructure_file_holder link_holder instructure_file_link_holder"><a href="https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-yarom.pdf" target="_blank">https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-yarom.pdf</a></span></p>
 <p><span class="instructure_file_holder link_holder instructure_file_link_holder">https://link.springer.com/chapter/10.1007/978-3-030-29959-0_14</span></p>
 <p><br><br></p>
-<p><iframe id="kmsembed-0_h80q7vo7" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_h80q7vo7/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
-<p><iframe id="kmsembed-0_h99ybywl" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_h99ybywl/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
-<p><iframe id="kmsembed-0_fq88mpd3" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_fq88mpd3/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
-<p><iframe id="kmsembed-0_8uhgyd5g" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_8uhgyd5g/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
-<p><iframe id="kmsembed-0_vvre300a" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_vvre300a/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
+<p><iframe id="kmsembed-0_h80q7vo7" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_h80q7vo7/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" loading="lazy" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe></p>
+<p><iframe id="kmsembed-0_h99ybywl" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_h99ybywl/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" loading="lazy" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe></p>
+<p><iframe id="kmsembed-0_fq88mpd3" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_fq88mpd3/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" loading="lazy" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe></p>
+<p><iframe id="kmsembed-0_8uhgyd5g" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_8uhgyd5g/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" loading="lazy" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe></p>
+<p><iframe id="kmsembed-0_vvre300a" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_vvre300a/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" loading="lazy" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe></p>
 <h3><span>Recording of the live lecture</span></h3>
-<p><iframe id="kmsembed-0_3d5umxvc" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_3d5umxvc/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe></p>
+<p><iframe id="kmsembed-0_3d5umxvc" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_3d5umxvc/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" loading="lazy" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe></p>
+---
+title: 'Lecture 28/1: Non-cryptographic attacks on cryptographic systems (Roberto)
+  on CAMPUS+ZOOM'
+regex: Lecture.*Non-cryptographic attacks
+published: false
+front_page: false
+editing_roles: teachers
+modules:
+- Week 3 (calendar week 5)
+---
+<h2>
+Content
+</h2>
+<p>
+<span>Side-channel attacks: the case of AES, Specre, fault injection:
+Rowhammer, Time To Check Time To Use</span>
+</p>
+<p>
+<span>Instructions:</span>
+</p>
+<p>
+<span>The part related to AES is flipped. You should watch the videos
+below and solve the exercise published in
+(<a class="instructure_file_link instructure_scribd_file inline_disabled" title="AES side channel exercise (2).pdf" href="https://canvas.kth.se/courses/52629/files/8426524?verifier=S4dFvCI0kjoLgmzT8MqUqH3FgKDUp4qnOHiOZeVp&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/52629/files/8426524" data-api-returntype="File">AES
+side channel exercise (2).pdf</a>) at home. During the first hour of the
+lecture we will review the exercise and discuss the solution. We will no
+replay the videos below during the live lecture. During the second hour
+we will look at Spectre, fault injection: Rowhammer, Time To Check Time
+To Use.</span>
+</p>
+<h3>
+<span>Resources</span>
+</h3>
+<p>
+<span>(may get minor updates)</span>
+</p>
+<p>
+<a class="instructure_file_link instructure_scribd_file inline_disabled" title="Applied Crypto 2025 - SideChannels  (1).pdf" href="https://canvas.kth.se/courses/52629/files/8974168?verifier=LOWeKpjaVjBIEnJeUzMVVSayO1k4foF8Np4HZ1Ve&amp;wrap=1" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/52629/files/8974168" data-api-returntype="File"><span class="instructure_file_holder link_holder instructure_file_link_holder">slides
+(pdf)</span></a>
+</p>
+<p>
+<span class="instructure_file_holder link_holder instructure_file_link_holder">Some
+interesting recent papers:</span>
+</p>
+<p>
+<span class="instructure_file_holder link_holder instructure_file_link_holder"><a href="https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-yarom.pdf" target="_blank">https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-yarom.pdf</a></span>
+</p>
+<p>
+<span class="instructure_file_holder link_holder instructure_file_link_holder">https://link.springer.com/chapter/10.1007/978-3-030-29959-0_14</span>
+</p>
+<p>
+<br><br>
+</p>
+<p>
+<iframe id="kmsembed-0_h80q7vo7" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_h80q7vo7/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+<p>
+<iframe id="kmsembed-0_h99ybywl" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_h99ybywl/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+<p>
+<iframe id="kmsembed-0_fq88mpd3" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_fq88mpd3/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+<p>
+<iframe id="kmsembed-0_8uhgyd5g" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_8uhgyd5g/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+<p>
+<iframe id="kmsembed-0_vvre300a" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_vvre300a/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+<h3>
+<span>Recording of the live lecture</span>
+</h3>
+<p>
+<iframe id="kmsembed-0_3d5umxvc" class="kmsembed" title="Kaltura Player" src="https://play.kth.se/embed/secure/iframe/entryId/0_3d5umxvc/uiConfId/23449749" width="650" height="366" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *" loading="lazy"></iframe>
+</p>
+
