--- a/modules/week-3/lecture-zkp-protocols.html
+++ b/modules/week-3/lecture-zkp-protocols.html
@@ -1,30 +1,31 @@
 ---
 title: 'Lecture 26/1: ZKP protocols (Daniel) on ZOOM+CAMPUS'
-url: lecture-26-slash-1-zkp-protocols-daniel-on-zoom+campus
+regex: Lecture.*ZKP protocols
 published: true
 front_page: false
 editing_roles: teachers
 modules:
-- Week 3
+- Week 3 (calendar week 5)
 ---
-<h3>Content&nbsp;</h3>
-<p><span>High level description of zero knowledge proofs (ZKP).</span></p>
-<p><a href="https://people.kth.se/~dbosk/tilkry/zk-slides.pdf">ZK lecture 
-  slides</a></p>
-<iframe id="kmsembed-0_fgvmogjz" width="650" height="366" 
-  src="https://play.kth.se/embed/secure/iframe/entryId/0_fgvmogjz/uiConfId/23453971/st/0" 
-  class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen 
-allow="autoplay *; fullscreen *; encrypted-media *" 
-referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads 
+<h3>
+Content&nbsp;
+</h3>
+<p>
+<span>High level description of zero knowledge proofs (ZKP).</span>
+</p>
+<p>
+<a href="https://people.kth.se/~dbosk/tilkry/zk-slides.pdf">ZK lecture
+slides</a>
+</p>
+<iframe id="kmsembed-0_fgvmogjz" width="650" height="366" src="https://play.kth.se/embed/secure/iframe/entryId/0_fgvmogjz/uiConfId/23453971/st/0" class="kmsembed" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads 
 allow-forms allow-same-origin allow-scripts allow-top-navigation 
 allow-pointer-lock allow-popups allow-modals allow-orientation-lock 
 allow-popups-to-escape-sandbox allow-presentation 
-allow-top-navigation-by-user-activation" frameborder="0" 
-title="tilkry26-zk"></iframe>
-<h3>Resources from previous years</h3>
-<p><a class="instructure_file_link instructure_scribd_file inline_disabled" 
-  title="tilkry22_lec06_zkp.pdf" 
-  href="https://canvas.kth.se/courses/52629/files/8426492?verifier=LIqX4DDiJVG9E6WrYTni8n2ZEqhMRJBXnUGz9Gwh&amp;wrap=1" 
-target="_blank" 
-data-api-endpoint="https://canvas.kth.se/api/v1/courses/52629/files/8426492" 
-data-api-returntype="File">tilkry22_lec06_zkp.pdf</a></p>
+allow-top-navigation-by-user-activation" frameborder="0" title="tilkry26-zk" loading="lazy"></iframe>
+<h3>
+Resources from previous years
+</h3>
+<p>
+<a class="instructure_file_link instructure_scribd_file inline_disabled" title="tilkry22_lec06_zkp.pdf" href="https://canvas.kth.se/courses/52629/files/8426492?verifier=LIqX4DDiJVG9E6WrYTni8n2ZEqhMRJBXnUGz9Gwh&amp;wrap=1" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/52629/files/8426492" data-api-returntype="File">tilkry22_lec06_zkp.pdf</a>
+</p>
+
