--- a/modules/week-4/lecture-randomness.html
+++ b/modules/week-4/lecture-randomness.html
@@ -8,12 +8,9 @@ modules:
 - 'Week 4 (calendar week 6) '
 ---
 <h3 id="content">Content</h3>
-<p>Probability distributions and entropy measures. Random numbers vs
-pseudo random numbers. Practical solutions for generating and testing
-randomness and their advantages and disadvantages (good and bad
-designs). Physical ("true" and "heuristic") random generators, pseudo
-random ("deterministic") generators, cryptographically strong
-generators. Standards for (pseudo) random number generation.</p>
+<p>Probability distributions and entropy measures. Random numbers vs pseudo random numbers. Practical solutions for generating and testing randomness and their advantages and disadvantages (good and bad designs). Physical ("true" and "heuristic") random generators, pseudo random ("deterministic") generators, cryptographically strong generators. Standards for (pseudo) random number generation.</p>
+<h3 id="resources">Resources</h3>
+<p>Slides <a class="inline_disabled" href="https://canvas.kth.se/courses/59543/files/10105850/download?verifier=yBxrmxIcKXA7DxFuUAZxUt7pObvgH7WhaPNa6WMa&amp;wrap=1" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/10105850" data-api-returntype="File">pdf&nbsp;</a>&nbsp;&nbsp;<a class="inline_disabled" href="https://canvas.kth.se/courses/59543/files/10105851/download?verifier=cBniymCO8V8XdZdZ9KTGl5GSEhXSiDThB1zx9U65&amp;wrap=1" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/10105851" data-api-returntype="File">ppt</a> updated/corrected Feb 6. (There are a few animations on the ppt file which may not come out well in the converted pdf version.)</p>
 <iframe id="kmsembed-0_rlkfcu9r" width="650" height="366" 
   src="https://play.kth.se/embed/secure/iframe/entryId/0_rlkfcu9r/uiConfId/23453971/st/0" 
   class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen 
@@ -24,15 +21,8 @@ allow-pointer-lock allow-popups allow-modals allow-orientation-lock
 allow-popups-to-escape-sandbox allow-presentation 
 allow-top-navigation-by-user-activation" frameborder="0" 
 title="tilkry26-randomness"></iframe>
-<h3 id="resources">Resources</h3>
-<p>Slides <a href="https://canvas.kth.se/courses/59543/files/9512718/download?verifier=62TUQray4igQ5pdLgsxSOCU4xHOWo9vQ2plI3zVH&amp;wrap=1" class="inline_disabled" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512718" data-api-returntype="File">pdf&nbsp;</a>&nbsp;&nbsp;<a href="https://canvas.kth.se/courses/59543/files/9512717/download?verifier=kRUdcSVYtCLauG51KwscR75lEzR467gEoW80Bvar&amp;wrap=1" class="inline_disabled" target="_blank" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512717" data-api-returntype="File">ppt</a> updated/corrected Feb 6. (There are a
-few animations on the ppt file which may not come out well in the
-converted pdf version.)</p>
 <h3 id="videos-from-previous-years">Videos from previous years</h3>
-<p><a href="https://play.kth.se/media/t/0_dlewhae6" class="inline_disabled" target="_blank">First half</a> [40m], closed
-captioning available, <a href="https://canvas.kth.se/courses/59543/files/9512692?verifier=pZjEQ9SH4egTEZgBkhVErcEwE5ajR5lzKpyjitgj&amp;wrap=1" class="instructure_file_link instructure_scribd_file inline_disabled" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512692" data-api-returntype="File" title="tilkry22MNrandomization.txt">transcript</a>.</p>
-<p><a href="https://play.kth.se/media/tilkry22MNrandomization2ndhalf/0_ooqhm5jc" class="inline_disabled" target="_blank">Second half</a> [46m], closed
-captioning available, on pseudo-randomization,&nbsp; <a href="https://canvas.kth.se/courses/59543/files/9512697?verifier=Si9RwU0tE6aZNcKmPKOMmjwhZOwrZM4S2i1ptE00&amp;wrap=1" class="instructure_file_link instructure_scribd_file inline_disabled" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512697" data-api-returntype="File" title="tilkry22MNrandomization2ndhalf.txt">transcript</a>.&nbsp;</p>
+<p><a class="inline_disabled" href="https://play.kth.se/media/t/0_dlewhae6" target="_blank">First half</a> [40m], closed captioning available, <a class="instructure_file_link instructure_scribd_file inline_disabled" title="tilkry22MNrandomization.txt" href="https://canvas.kth.se/courses/59543/files/9512692?verifier=pZjEQ9SH4egTEZgBkhVErcEwE5ajR5lzKpyjitgj&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512692" data-api-returntype="File">transcript</a>.</p>
+<p><a class="inline_disabled" href="https://play.kth.se/media/tilkry22MNrandomization2ndhalf/0_ooqhm5jc" target="_blank">Second half</a> [46m], closed captioning available, on pseudo-randomization,&nbsp; <a class="instructure_file_link instructure_scribd_file inline_disabled" title="tilkry22MNrandomization2ndhalf.txt" href="https://canvas.kth.se/courses/59543/files/9512697?verifier=Si9RwU0tE6aZNcKmPKOMmjwhZOwrZM4S2i1ptE00&amp;wrap=1" target="_blank" data-canvas-previewable="false" data-api-endpoint="https://canvas.kth.se/api/v1/courses/59543/files/9512697" data-api-returntype="File">transcript</a>.&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-
