--- a/modules/week-4/lecture-randomness.html
+++ b/modules/week-4/lecture-randomness.html
@@ -5,7 +5,7 @@ published: true
 front_page: false
 editing_roles: teachers
 modules:
-- 'Week 4 (calendar week 6) '
+- Week 4
 ---
 <h3 id="content">Content</h3>
 <p>Probability distributions and entropy measures. Random numbers vs pseudo random numbers. Practical solutions for generating and testing randomness and their advantages and disadvantages (good and bad designs). Physical ("true" and "heuristic") random generators, pseudo random ("deterministic") generators, cryptographically strong generators. Standards for (pseudo) random number generation.</p>
