Corrects titles of week-4 lectures

--- a/modules/week-4/lecture-randomness.html
+++ b/modules/week-4/lecture-randomness.html
@@ -1,5 +1,5 @@
 ---
-title: 'Lecture 2/2: Randomness (Mats) on CAMPUS'
+title: 'Lecture 2/2: Randomness (Mats) on CAMPUS+ZOOM'
 regex: Lecture.*Randomness
 published: true
 front_page: false
